Upgrade attachment-sendfile to JDK17